--- a/ui/pop-up.html
+++ b/ui/pop-up.html
@@ -8,11 +8,8 @@
   <body>
     <section>
       <header>
+        <h1>Get Firefox for Mobile</h1>
       </header>
-      <main>
-      </main>
-      <footer>
-      </footer>
     </section>
     <script src="js/synced.js"></script>
   </body>
