Show notification and enable browser_action

--- a/ui/pop-up.html
+++ b/ui/pop-up.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/synced.css" media="screen" />
   </head>
   <body>
-    <section>
+    <section class="container">
       <header>
         <h1>Get Firefox for Mobile</h1>
       </header>
